--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,13 +3,13 @@ name: 自动部署到服务器
 on:
   push:
     branches:
-      - main  # 当推送到main分支时触发
-  workflow_dispatch:  # 允许手动触发
+      - master # 当推送到master分支时触发
+  workflow_dispatch: # 允许手动触发
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: 检出代码
         uses: actions/checkout@v4
@@ -23,17 +23,17 @@ jobs:
           port: ${{ secrets.SERVER_PORT }}
           script: |
             cd ${{ secrets.DEPLOY_PATH }}
-            
+
             # 拉取最新代码
-            git pull origin main
-            
+            git pull origin master
+
             # 停止旧容器
             docker-compose down
-            
+
             # 重新构建并启动
             docker-compose up -d --build
-            
+
             # 清理无用镜像
             docker image prune -f
-            
+
             echo "✅ 部署完成！"
